[gd_scene load_steps=51 format=4 uid="uid://btfwmvupkuu2g"]

[ext_resource type="Script" uid="uid://busmdl533rawl" path="res://scripts/dayTwo/DayTwoLR.gd" id="1_ni2pb"]
[ext_resource type="AudioStream" uid="uid://cu0o2emdybhpl" path="res://assets/sfx/tv_sound.mp3" id="2_0ekg8"]
[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="3_u0nks"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="4_3ngda"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="5_gh1vb"]
[ext_resource type="PackedScene" uid="uid://cth4hylf5dh1y" path="res://scenes/Objects/couch.tscn" id="6_iqkgt"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="8_gl7a4"]
[ext_resource type="Script" uid="uid://m1npkkbsfmks" path="res://scripts/d2_tv_light.gd" id="9_ni2pb"]
[ext_resource type="PackedScene" uid="uid://banhcwdrm7u2h" path="res://scenes/Objects/theBox.tscn" id="10_abkq3"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="11_ttfv5"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="12_gwp3y"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="13_85ve3"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="14_bfbal"]
[ext_resource type="Script" uid="uid://bj218rqao0syu" path="res://scripts/DialogueFunctionResource.gd" id="15_lwyg5"]
[ext_resource type="PackedScene" uid="uid://cbsr1cdpporx" path="res://scenes/Objects/lamp.tscn" id="16_r3whv"]
[ext_resource type="PackedScene" uid="uid://cuu4wcfoflloq" path="res://scenes/Objects/plant_d2.tscn" id="17_ni2pb"]
[ext_resource type="Texture2D" uid="uid://def25uwxx8hvy" path="res://assets/objects/picture.png" id="18_eo4i5"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="19_pw0t8"]
[ext_resource type="Texture2D" uid="uid://dkcfj3mhkcom4" path="res://assets/Spritesheets/player_idle_right.png" id="20_gy4ui"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="21_pgo7x"]
[ext_resource type="PackedScene" uid="uid://b08631to2twuy" path="res://scenes/Objects/tv_d2.tscn" id="22_gbdtq"]
[ext_resource type="Texture2D" uid="uid://cmi7pf3kwmats" path="res://scenes/Days/DayTwo/d2.tres" id="22_iyqsm"]
[ext_resource type="Texture2D" uid="uid://d3t7e3b5dulg7" path="res://assets/misc/crack_1.png" id="24_2he23"]
[ext_resource type="Texture2D" uid="uid://bmas8ygllior4" path="res://assets/misc/crack_2.png" id="24_icu17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8ve7"]
size = Vector2(20, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqq4a"]
size = Vector2(36, 8)

[sub_resource type="Gradient" id="Gradient_icu17"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0vuf1"]
gradient = SubResource("Gradient_icu17")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_50stm"]
polygon = PackedVector2Array(122, 14, 101, 6, 122, 16, 122, 26, 100, 35, 122, 28, 124, 28, 124, 14)

[sub_resource type="Resource" id="Resource_0vuf1"]
script = ExtResource("13_85ve3")
text = "*it'll only hurt more"
text_speed = 11.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.8
text_volume_pitch_max = 0.75
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2ldl"]
size = Vector2(11, 7.000002)

[sub_resource type="Resource" id="Resource_ni2pb"]
script = ExtResource("13_85ve3")
text = "*just a box."
text_speed = 12.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.72
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_kv4q3"]
script = ExtResource("13_85ve3")
text = "*it's a picture of a rainy day"
text_speed = 14.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njhrv"]
size = Vector2(13, 9)

[sub_resource type="Resource" id="Resource_dsoqk"]
script = ExtResource("13_85ve3")
text = "*i'm so tired..."
text_speed = 10.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_625l6"]
size = Vector2(6, 68)

[sub_resource type="Resource" id="Resource_n220y"]
script = ExtResource("13_85ve3")
text = "*i need to work.."
text_speed = 14.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_ia1uf"]
script = ExtResource("13_85ve3")
text = "*oh, it's dark..."
text_speed = 12.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_fxcas"]
script = ExtResource("15_lwyg5")
target_path = NodePath("..")
function_name = "_end_tv"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n220y"]
size = Vector2(31, 43)

[sub_resource type="Resource" id="Resource_fkvcy"]
script = ExtResource("13_85ve3")
text = "*A radiator. it keeps me warm"
text_speed = 14.0
text_sound = ExtResource("14_bfbal")
text_volume_db = 1
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv4q3"]
size = Vector2(4, 17)

[sub_resource type="Resource" id="Resource_6r5e7"]
script = ExtResource("15_lwyg5")
target_path = NodePath("..")
function_name = "_start_couch_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ni2pb"]
size = Vector2(8, 11)

[sub_resource type="Resource" id="Resource_gwd6h"]
script = ExtResource("13_85ve3")
text = "*i could go out later"
text_speed = 14.0
text_sound = ExtResource("14_bfbal")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_njhrv"]
script = ExtResource("15_lwyg5")
target_path = NodePath("..")
function_name = "_fade_to_dark"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgo7x"]
size = Vector2(32, 43)

[sub_resource type="Curve" id="Curve_gbdtq"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_2he23"]
width = 2048
curve = SubResource("Curve_gbdtq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_icu17"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(64, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_2he23")
alpha_curve = ExtResource("22_iyqsm")

[node name="LivingRoom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ni2pb")

[node name="tv_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0ekg8")
volume_db = 24.0
parameters/looping = true

[node name="CouchTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="CouchDialogue" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="EndCouchTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(66, 18)

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAAAP//AAAGAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAAHAP//AAADAAEAAAAAAP7/AAAGAAAAAAACAP7/AAAGAAIAAAADAP7/AAADAAAAAAAEAP7/AAADAAAAAAAHAP7/AAADAAAAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wAAAAACAAIAAAD/////AAACAAEAAAD///7/AAACAAAAAAAIAAIAAAAEAAIAAAAIAAEAAAAEAAIAAAAIAAAAAAAEAAIAAAAIAP//AAAEAAEAAAAIAP7/AAAEAAAAAAAFAP7/AAADAAAAAAAFAP//AAADAAEAAAAGAP7/AAADAAAAAAAGAP//AAADAAEAAAD//wMAAAACAAQAAAAAAAMAAAAAAAQAAAABAAMAAAAFAAMAAAACAAMAAAABAAQAAAADAAMAAAADAAQAAAAEAAMAAAAAAAQAAAAGAAMAAAAFAAMAAAAHAAMAAAABAAQAAAAIAAMAAAAEAAQAAAACAP//AAAGAAMAAAABAP//AAADAAMAAAABAP7/AAADAAIAAAAFAAMAAAAFAAMAAAA=")
tile_set = ExtResource("3_u0nks")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("4_3ngda")]
position = Vector2(53, 25)
speed = 50.0

[node name="toBedroom" parent="." instance=ExtResource("5_gh1vb")]
position = Vector2(24, -5)
wanted_room_path = "res://scenes/Days/DayTwo/d2_bedroom.tscn"
wanted_player_pos = Vector2(56, 42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBedroom"]
shape = SubResource("RectangleShape2D_c8ve7")

[node name="toEntry" parent="." instance=ExtResource("5_gh1vb")]
position = Vector2(24, 55)
wanted_room_path = "res://scenes/Days/DayTwo/d2_entry.tscn"
wanted_player_pos = Vector2(72, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toEntry"]
shape = SubResource("RectangleShape2D_c8ve7")

[node name="toKitchen" parent="." instance=ExtResource("5_gh1vb")]
position = Vector2(96, 55)
wanted_room_path = "res://scenes/Days/DayTwo/d2_kitchen.tscn"
wanted_player_pos = Vector2(80, 7)
isDoor = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="toKitchen"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_fqq4a")

[node name="Couch" parent="." instance=ExtResource("6_iqkgt")]
position = Vector2(94, 17)

[node name="tvLight" type="PointLight2D" parent="."]
position = Vector2(121, 21)
enabled = false
color = Color(1, 1, 0.8156863, 1)
energy = 0.2
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("8_gl7a4")
script = ExtResource("9_ni2pb")

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(64, 19)
scale = Vector2(0.67622954, 0.67622954)
energy = 0.3
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_0vuf1")

[node name="boxLight" type="PointLight2D" parent="."]
position = Vector2(6.9999995, 1)
scale = Vector2(0.12295083, 0.12295081)
energy = 0.25
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_0vuf1")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_50stm")

[node name="TheBox" parent="." instance=ExtResource("10_abkq3")]
position = Vector2(7.000002, -1.9073486e-06)

[node name="box_dialog_dark" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(7.000002, 0.9999981)
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_0vuf1")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="box_dialog_dark"]
position = Vector2(-0.5, 0.50000095)
shape = SubResource("RectangleShape2D_m2ldl")
disabled = true

[node name="box_dialog" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(7.000002, 0.9999981)
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_ni2pb")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="box_dialog"]
position = Vector2(-0.5, 0.50000095)
shape = SubResource("RectangleShape2D_m2ldl")

[node name="picture_dialog" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(95, -8)
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_kv4q3")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="picture_dialog"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_njhrv")

[node name="should_sleep" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(53, 22)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_dsoqk")])

[node name="trigger_sleep" type="CollisionShape2D" parent="should_sleep"]
shape = SubResource("RectangleShape2D_625l6")
disabled = true

[node name="should_work" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(53, 22)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_n220y")])

[node name="trigger_work" type="CollisionShape2D" parent="should_work"]
shape = SubResource("RectangleShape2D_625l6")
disabled = true

[node name="couch_end" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(102, 25)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_ia1uf"), SubResource("Resource_fxcas")])

[node name="trigger_end_couch" type="CollisionShape2D" parent="couch_end"]
position = Vector2(-5.5, 0.5)
shape = SubResource("RectangleShape2D_n220y")
disabled = true

[node name="Lamp" parent="." instance=ExtResource("16_r3whv")]
position = Vector2(123, 6)

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.7921569, 0.8156863, 0.8980392, 1)

[node name="Plant" parent="." instance=ExtResource("17_ni2pb")]
position = Vector2(48, 3)

[node name="Picture" type="Sprite2D" parent="."]
position = Vector2(95, -10)
texture = ExtResource("18_eo4i5")

[node name="Radiator" parent="." instance=ExtResource("19_pw0t8")]
position = Vector2(2, 27)

[node name="radiator_dialog" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(1, 33)
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_fkvcy")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="radiator_dialog"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_kv4q3")

[node name="Player_on_couch" type="Sprite2D" parent="."]
visible = false
position = Vector2(96, 18)
texture = ExtResource("20_gy4ui")
hframes = 2
frame = 1

[node name="tv_watch" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(97, 25)
only_activate_once = true
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_6r5e7")])

[node name="trigger_watch_tv" type="CollisionShape2D" parent="tv_watch"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_ni2pb")
disabled = true

[node name="tv_watch2" parent="." instance=ExtResource("11_ttfv5")]
position = Vector2(97, 25)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_gwp3y")]([SubResource("Resource_gwd6h"), SubResource("Resource_njhrv")])

[node name="watch_tv" type="CollisionShape2D" parent="tv_watch2"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_pgo7x")
disabled = true

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(64, 17)
amount = 28
texture = ExtResource("21_pgo7x")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_icu17")
metadata/_edit_lock_ = true

[node name="TV" parent="." instance=ExtResource("22_gbdtq")]
position = Vector2(123, 19)

[node name="Crack1" type="Sprite2D" parent="."]
position = Vector2(67, -3)
texture = ExtResource("24_2he23")

[node name="Crack2" type="Sprite2D" parent="."]
position = Vector2(64, -18)
texture = ExtResource("24_icu17")

[connection signal="timeout" from="CouchTimer" to="." method="_on_couch_timer_timeout"]
[connection signal="timeout" from="CouchDialogue" to="." method="_on_couch_dialogue_timeout"]
[connection signal="timeout" from="EndCouchTimer" to="." method="_on_end_couch_timer_timeout"]
